--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"cloudinary": "^1.26.2",
 		"connect-mongo": "^4.4.1",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
@@ -16,7 +17,9 @@
 		"express-session": "^1.17.2",
 		"http-errors": "^1.7.2",
 		"mongoose": "^5.13.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"multer": "^1.4.2",
+		"multer-storage-cloudinary": "^4.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^7.30.0",
