--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"cloudinary": "^1.26.2",
 		"connect-mongo": "^4.4.1",
 		"cors": "^2.8.5",
+		"date-fns": "^2.23.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
